# ssd_head_keras

./: demo_inference.ipynb  pyproject.toml
head_ssd/: head_ssd.py
